--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,9 +7,9 @@
 <header class="site-header">
   <div class="container">
       <h1 class="logo">
-        <a href="{{ "/" | absolute_url }}">{{ site.name }}</a>
+        <a href="{{ "/" | absolute_url }}"style="background-size:48px;margin-left:2%;">{{ site.name }}</a>
       </h1>
-      <nav class="main-nav">
+      <nav class="main-nav" style="margin-right:2%;">
         <ul class="navigation">
           {% for link in site.menus.navigation %}
           <li class="{% if link.children %}nested {% endif %}{% if url == link.url %}current{% endif %}">
