--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="site-footer">
 	<div class="container pure-g">
         <div class="footer-col pure-u-1 pure-u-md-1-4">
-            <img src="{{ "/img/logo-white.png" | absolute_url }}" alt="" class="footer-logo">
+            <img src="{{ "/img/logo.png" | absolute_url }}" alt="" class="footer-logo">
         </div>
         <div class="footer-col pure-u-1 pure-u-md-1-4">
-            <h3>About {{ site.short_title }}</h3>
+            <h3>About </h3>
             <ul>
             {% for item in site.menus.footer %}
                 <li><a href="{{ item.url | absolute_url }}">{{ item.title }}</a></li>
@@ -29,8 +29,8 @@
 	</div>
 	<div class="copyright">
         <p>
-            &copy;{{ 'now' | date: "%Y" }} {{ site.title }} - All Rights Reserved<br>
-			<a href="{{ "/admin" | absolute_url }}">Site Admin</a>
+            &copy;{{ 'now' | date: "%Y" }} Indicative Data Science Lab - All Rights Reserved<br>
+			<a href="{{ "/admin" | absolute_url }}"></a>
 		</p>
 	</div>
 </footer>
